--- a/templates/contact.html
+++ b/templates/contact.html
@@ -88,7 +88,7 @@
     button[type="submit"] {
         background-color: #007BFF;
         color: white;
-        border: none;
+        transition: .2s;
         padding: 10px 15px;
         border-radius: 4px;
         cursor: pointer;
@@ -97,7 +97,7 @@
     }
 
     button[type="submit"]:hover {
-        background-color: #0056b3;
+        background-color: #b3002a;
     }
 
     p {
@@ -150,7 +150,6 @@
                 </div>
                 <button type="submit">ENVIAR</button>
             </form>
-            <p>Imagens de <a href="https://www.freepik.com" target="_blank">Freepik</a></p>
         </div>
     </div>
 </body>
