--- a/templates/register.html
+++ b/templates/register.html
@@ -122,6 +122,20 @@
         .register-container .login-link:hover {
             text-decoration: underline;
         }
+
+        button[type="submit"] {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 4px;
+            font-size: 16px;
+            width: 100%;
+            transition: .2s;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #b3002a;
+        }
     </style>
 </head>
 <body>
