--- a/templates/about.html
+++ b/templates/about.html
@@ -106,6 +106,21 @@
             margin-bottom: 20px;
         }
 
+        button[type="submit"] {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+            transition: .2s;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #b3002a;
+        }
+
     </style>
 </head>
 <body>
