--- a/templates/destination_list.html
+++ b/templates/destination_list.html
@@ -178,6 +178,21 @@
             font-weight: bold;
         }
 
+        button[type="submit"] {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+            transition: .2s;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #b3002a;
+        }
+
         .close:hover,
         .close:focus {
             color: black;
