--- a/templates/home.html
+++ b/templates/home.html
@@ -91,6 +91,21 @@
             align-items: center;
         }
 
+        button[type="submit"] {
+            background-color: #007BFF;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            width: 100%;
+            transition: .2s;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #b3002a;
+        }
+
     </style>
 
 </head>
