--- a/templates/contact.html
+++ b/templates/contact.html
@@ -38,10 +38,11 @@
         font-weight: 700;
         padding: 0 10px;
         line-height: 50px;
+        transition: .2s;
     }
 
     .navbar a:hover {
-        text-decoration: underline;
+        color: gold;
     }
 
     .login-register {
@@ -50,15 +51,15 @@
     }
 
     .contact-container {
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: rgba(255, 255, 255, 0.8);
         padding: 40px;
         border-radius: 8px;
         box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        width: 28%;
+        width: 25%;
         text-align: center;
         display: flex;
-        justify-content: left;
-        margin-left: 0; 
+        justify-content: center;
+        margin-left: 0;
     }
 
     .contact-form h2 {
@@ -78,6 +79,7 @@
         border-radius: 4px;
         font-size: 14px;
         box-sizing: border-box;
+        height: 10vh;
     }
 
     textarea {
