--- a/templates/contact_success.html
+++ b/templates/contact_success.html
@@ -42,10 +42,11 @@
             padding: 0 10px;
             line-height: 50px;
             transition: color 0.3s;
+            transition: .2s;
         }
 
         .navbar a:hover {
-            color: #007BFF;
+            color: gold;
         }
 
         .login-register {
