--- a/templates/about.html
+++ b/templates/about.html
@@ -53,10 +53,11 @@
             font-weight: 700;
             padding: 0 10px;
             line-height: 50px;
+            transition: .2s;
         }
 
         .navbar a:hover {
-            text-decoration: underline;
+            color: gold;
         }
 
         .login-register {
