--- a/templates/destination_list.html
+++ b/templates/destination_list.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'roboto', sans-serif;
+            font-family: 'Roboto', sans-serif;
             background-color: #e7f0f7;
             color: #333;
             text-align: center;
@@ -16,8 +16,8 @@
 
         .navbar {
             position: fixed;
-            top: 0px;
-            right: 0px;
+            top: 0;
+            right: 0;
             width: 100%;
             background-color: #4a90e2;
             display: flex;
@@ -36,10 +36,11 @@
             font-weight: 700;
             padding: 0 10px;
             line-height: 50px;
+            transition: .2s;
         }
 
         .navbar a:hover {
-            text-decoration: underline;
+            color: gold;
         }
 
         .login-register {
@@ -104,6 +105,8 @@
 
         .modal {
             display: none;
+            align-items: center;
+            justify-content: center;
             position: fixed;
             z-index: 2000;
             left: 0;
@@ -113,12 +116,10 @@
             overflow: auto;
             background-color: rgba(0, 0, 0, 0.4);
             padding-top: 1%;
-
-
         }
 
         .modal-content {
-            max-width: 600px;
+            max-width: 800px;
             width: 100%;
             max-height: 90vh;
             margin: 0 auto;
@@ -219,7 +220,6 @@
             <a href="{% url 'register' %}">CADASTRO</a>
         {% endif %}
     </div>
-
 </div>
 
 <h1>Destinos Disponíveis!</h1>
@@ -296,13 +296,18 @@
 
 <script>
     function openModal(id) {
-        document.getElementById('modal-' + id).style.display = "block";
+        document.getElementById('modal-' + id).style.display = "flex";
     }
 
     function closeModal(id) {
         document.getElementById('modal-' + id).style.display = "none";
     }
-</script>
 
+    window.onclick = function(event) {
+        if (event.target.className === 'modal') {
+            event.target.style.display = "none";
+        }
+    }
+</script>
 </body>
 </html>
