--- a/templates/register.html
+++ b/templates/register.html
@@ -14,6 +14,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: black;
         }
 
         .bg-video {
@@ -52,10 +53,11 @@
             font-weight: 700;
             padding: 0 10px;
             line-height: 50px;
+            transition: .2s;
         }
 
         .navbar a:hover {
-            text-decoration: underline;
+            color: gold;
         }
 
         .login-register {
