--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -13,6 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            background-color: black;
         }
 
         /* Container do vídeo de fundo */
@@ -35,27 +36,27 @@
             top: 0px;
             right: 0px;
             width: 100%;
-
             display: flex;
             justify-content: space-between;
-            align-items: center; /* Alinha itens verticalmente */
+            align-items: center;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            z-index: 1000; /* Garantir que o navbar fique por cima do conteúdo */
-            padding: 0 20px; /* Espaçamento interno lateral */
-            box-sizing: border-box; /* Inclui padding na largura total */
-            height: 50px; /* Altura fixa para o navbar */
+            z-index: 1000;
+            padding: 0 20px;
+            box-sizing: border-box;
+            height: 50px;
         }
 
         .navbar a {
             color: white;
             text-decoration: none;
             font-weight: 700;
-            padding: 0 10px; /* Ajuste de padding lateral */
-            line-height: 50px; /* Alinha verticalmente com base na altura do navbar */
+            padding: 0 10px;
+            line-height: 50px;
+            transition: .2s;
         }
 
         .navbar a:hover {
-            text-decoration: underline;
+            color: gold;
         }
 
         .login-register {
@@ -71,7 +72,8 @@
             border-radius: 10px;
             box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
             text-align: center;
-            width: 350px;
+            width: 25%;
+            height: 40%;
             margin: auto;
         }
 
@@ -82,6 +84,7 @@
 
         .login-container .input-group {
             margin-bottom: 20px;
+            
         }
 
         .login-container .input-group input {
