--- a/templates/about.html
+++ b/templates/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Sobre</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -81,8 +81,6 @@
             justify-content: space-around;
             margin: 20px 0;
             padding: 20px;
-
-
         }
 
         .service {
@@ -91,7 +89,8 @@
             padding: 10px;
             background-color: #4a90e2;
             border-radius: 8px;
-            font-weight: 700;;
+            font-weight: 700;
+            border-style: groove;
         }
 
         .service img {
