--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contate-nos</title>
+    <title>CONTATE-NOS</title>
 </head>
 <style>
     body {
@@ -17,6 +17,7 @@
         align-items: center;
         padding-left: 15%;
     }
+
     .navbar {
         position: fixed;
         top: 0px;
@@ -60,6 +61,8 @@
         display: flex;
         justify-content: center;
         margin-left: 0;
+
+
     }
 
     .contact-form h2 {
@@ -118,41 +121,41 @@
 
 </style>
 <body>
-    <div class="navbar">
-        <a href="{% url 'home' %}">HOME</a>
-        <a href="{% url 'destination_list' %}">DESTINOS</a>
-        <a href="{% url 'contact' %}">CONTATO</a>
-        <a href="{% url 'about' %}">SOBRE</a>
-        <a href="{% url 'wishlist_view' %}">DESEJOS</a>
-        <div class="login-register">
-            {% if user.is_authenticated %}
-                <form method="POST" action="{% url 'logout' %}">
-                    {% csrf_token %}
-                    <button type="submit">Desconectar</button>
-                </form>
-            {% else %}
-                <a href="{% url 'login' %}">LOGIN</a>
-                <a href="{% url 'register' %}">CADASTRO</a>
-            {% endif %}
-        </div>
-    </div>
-    <div class="contact-container">
-        <div class="contact-form">
-            <h2>CONTATE-NOS</h2>
-            <form method="POST" action="{% url 'contact' %}">
+<div class="navbar">
+    <a href="{% url 'home' %}">HOME</a>
+    <a href="{% url 'destination_list' %}">DESTINOS</a>
+    <a href="{% url 'contact' %}">CONTATO</a>
+    <a href="{% url 'about' %}">SOBRE</a>
+    <a href="{% url 'wishlist_view' %}">DESEJOS</a>
+    <div class="login-register">
+        {% if user.is_authenticated %}
+            <form method="POST" action="{% url 'logout' %}">
                 {% csrf_token %}
-                <div class="form-group">
-                    {{ form.name }}
-                </div>
-                <div class="form-group">
-                    {{ form.email }}
-                </div>
-                <div class="form-group">
-                    {{ form.message }}
-                </div>
-                <button type="submit">ENVIAR</button>
+                <button type="submit">Desconectar</button>
             </form>
-        </div>
+        {% else %}
+            <a href="{% url 'login' %}">LOGIN</a>
+            <a href="{% url 'register' %}">CADASTRO</a>
+        {% endif %}
     </div>
+</div>
+<div class="contact-container">
+    <div class="contact-form">
+        <h2>CONTATE-NOS</h2>
+        <form method="POST" action="{% url 'contact' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                {{ form.name }}
+            </div>
+            <div class="form-group">
+                {{ form.email }}
+            </div>
+            <div class="form-group">
+                {{ form.message }}
+            </div>
+            <button type="submit">ENVIAR</button>
+        </form>
+    </div>
+</div>
 </body>
 </html>
